# DSRs

./: .gitignore  AGENTSMD_INFO.md  CLAUDE.md  CURRENT_PLAN.md  CURRENT_SPEC.md  Cargo.toml  INVESTIGATION_facet_baml_bridge.md  INVESTIGATION_pyo3_dataclass.md  README.md  TEMPLATE_REMOVAL_HANDOFF.md  TYPED_API_FORMAT_HANDOFF.md  const_block_generic  deps.jsonl  manifest.json  meta.json  nice.md  notes.jsonl  promote_attr_like  promote_generic  promote_generic_fnptr  state.jsonl  store_meta.json  sub-agents.md
baml-bridge/crates/baml-bridge-derive/: Cargo.toml
baml-bridge/crates/baml-bridge-derive/src/: lib.rs
baml-bridge/crates/bridge/: Cargo.toml
baml-bridge/crates/bridge/examples/: manual.rs
baml-bridge/crates/bridge/src/: lib.rs  registry.rs
baml-bridge/crates/bridge/tests/: fuzz.rs  golden.rs  integration.rs
baml-bridge/crates/jinja-runtime/: Cargo.toml
crates/baml-bridge/: AGENTS.md  Cargo.toml  README.md  TODO.md  UPSTREAM.md
crates/baml-bridge-derive/: AGENTS.md  Cargo.toml
crates/baml-bridge-derive/src/: lib.rs
crates/baml-bridge-derive/tests/: ui.rs
crates/baml-bridge-derive/tests/ok/: allow_dynamic.rs
crates/baml-bridge-derive/tests/ui/: invalid_syntax.rs  invalid_syntax.stderr  nested_duplicate_render.rs  nested_duplicate_render.stderr  nested_empty_render.rs  nested_empty_render.stderr  nested_fn_forbidden.rs  nested_fn_forbidden.stderr  nested_invalid_template.rs  nested_invalid_template.stderr  nested_style_template_conflict.rs  nested_style_template_conflict.stderr  nested_unknown_filter.rs  nested_unknown_filter.stderr  nested_unknown_key.rs  nested_unknown_key.stderr  nested_variant_render_as_union.rs  nested_variant_render_as_union.stderr  nested_variant_render_data_enum.rs  nested_variant_render_data_enum.stderr  unknown_field.rs  unknown_field.stderr  unknown_filter.rs  unknown_filter.stderr
crates/baml-bridge/examples/: manual.rs
crates/baml-bridge/src/: convert.rs  lib.rs  py.rs  registry.rs  render_trait.rs  to_value.rs
crates/baml-bridge/src/prompt/: jinja.rs  mod.rs  renderer.rs  tests.rs  value.rs  world.rs
crates/baml-bridge/tests/: fuzz.rs  golden.rs  integration.rs  property.rs  to_value_roundtrip.rs
crates/baml-bridge/tests/ui/: as_enum_data_enum.rs  as_enum_data_enum.stderr  function_type.rs  function_type.stderr  large_int_without_repr.rs  large_int_without_repr.stderr  map_key_non_string.rs  map_key_non_string.stderr  map_key_repr_non_map.rs  map_key_repr_non_map.stderr  serde_default_path.rs  serde_flatten.stderr  serde_json_value.rs  serde_skip_variant.rs  serde_untagged.rs  serde_untagged.stderr  trait_object.rs  trait_object.stderr  tuple_enum_variant.stderr  tuple_struct.rs
crates/bamltype/: AGENTS.md  Cargo.toml
crates/bamltype-derive/: Cargo.toml
crates/bamltype-derive/src/: lib.rs
crates/bamltype/src/: adapters.rs  compat.rs  convert.rs  facet_ext.rs  lib.rs  runtime.rs  schema_builder.rs  schema_registry.rs
crates/bamltype/tests/: contract_bridge_oracle.rs  contract_bridge_ui_messages.rs  contract_frozen_oracle.rs  golden_parity.rs  integration.rs  parity_bridge_api.rs  property_parity.rs  render_options_parity.rs  ui.rs
crates/bamltype/tests/ui/: as_enum_data_enum.rs  function_type.rs  large_int_without_repr.rs  map_key_non_string.rs  map_key_repr_non_map.rs  non_string_literal_attr.rs  non_string_literal_attr.stderr  serde_default_path.rs  serde_default_path.stderr  serde_flatten.rs  serde_json_value.rs  serde_json_value.stderr  serde_skip_variant.rs  serde_skip_variant.stderr  serde_untagged.rs  (+9 more)
crates/dspy-rs/: AGENTS.md  Cargo.toml  README.md
crates/dspy-rs/examples/: 01-simple.rs  02-module-iteration-and-updation.rs  03-evaluate-hotpotqa.rs  04-optimize-hotpotqa.rs  05-heterogenous-examples.rs  06-oai-compatible-models-batch.rs  06-oai-compatible-models.rs  06-other-providers-batch.rs  07-inspect-history.rs  08-optimize-mipro.rs  09-gepa-sentiment.rs  10-gepa-llm-judge.rs  11-custom-client.rs  12-tracing.rs  13-graph-modification.rs  14-gepa-vs-flop.rs  15-tools.rs  16-insurance-claim-prompt.rs  17-insurance-claims-extract.rs  17-pretty-tracing.rs  90-smoke-slice1-typed-predict.rs  91-smoke-slice2-chain-of-thought.rs  92-smoke-slice3-module-authoring.rs  93-smoke-slice4-react-operational.rs  94-smoke-slice5-optimizer-interface.rs  95-smoke-slice6-dynamic-graph.rs  python_types.rs  rlm_storage.rs  rlm_trajectory.rs  xx-vllm-inference.rs
crates/dspy-rs/src/: augmentation.rs  field.rs  lib.rs  py.rs  utils.rs
crates/dspy-rs/tests/: rlm_submit.rs  rlm_test.rs  test_adapter_dialect_passthrough.rs  test_adapters.rs  test_bamltype_attr_contract.rs  test_bamltype_docs_contract.rs  test_call_outcome.rs  test_caller_managed_conversation.rs  test_chain_of_thought_swap.rs  test_chat.rs  test_chat_adapter_schema.rs  test_chat_prompt_composition.rs  test_chat_prompt_golden.rs  test_compiled_signature.rs  test_dataloader.rs  test_dyn_predictor_forward_untyped.rs  test_evaluate_trainset_typed.rs  test_example.rs  test_field_macro.rs  test_flatten_roundtrip.rs  test_flop_tools.rs  test_gepa.rs  test_gepa_typed_metric_feedback.rs  test_input_format.rs  test_lm.rs  test_message_roundtrip.rs  test_miprov2.rs  test_module_ext.rs  test_module_facet_shapes.rs  test_module_forward_all.rs  test_named_parameters.rs  test_named_parameters_containers.rs  test_named_parameters_ref.rs  test_optimizable.rs  test_optimizer_named_parameters_integration.rs  test_optimizer_typed_metric.rs  test_pareto.rs  test_predict_conversation.rs  test_predict_conversation_live.rs  test_predict_lm_override.rs  (+24 more)
crates/dsrs-macros/: AGENTS.md  Cargo.toml
crates/dsrs-macros/src/: lib.rs  optim.rs  runtime_path.rs
crates/dsrs-macros/tests/: signature_derive.rs  test_signature_macro.rs
crates/rlm-core/: AGENTS.md  Cargo.toml
crates/rlm-core/src/: describe.rs  input.rs  lib.rs  variable.rs
crates/rlm-derive/: AGENTS.md  Cargo.toml
crates/rlm-derive/src/: attrs.rs  lib.rs  rlm_attr.rs  rlm_type.rs  runtime_path.rs
dspy-signatures/: Cargo.toml
dspy-signatures/src/: lib.rs
dspy-signatures/tests/: test_signature_macro.rs
(+491 files in other folders)
