[package]
name = "dspy-rs"
authors = ["Herumb Shandilya <herumb@stanford.edu>"]
version = "0.0.1-beta"
edition = "2024"
description = "A DSPy rewrite(not port) to Rust."
readme = "README.md"
documentation = "https://dsrs.herumbshandilya.com"
homepage = "https://dsrs.herumbshandilya.com"
repository = "https://github.com/krypticmouse/DSRs"
license-file = "LICENSE"
exclude = [
    "docs/*",
]

[dependencies]
derive_builder = "0.20.2"
futures = "0.3.31"
indexmap = "2.10.0"
rayon = "1.10.0"
rstest = "0.25.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smart-default = "0.7.1"
tokio = "1.46.1"
dspy_signatures = { path = "./dspy-signatures/"}
async-openai = "0.29.0"
