[package]
name = "dspy_signatures"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn   = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
indexmap = "2" 
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
dspy-rs = { path = "../" }