[package]
name = "baml-bridge-derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Derive macro for baml-bridge"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
convert_case = "0.6.0"
