[package]
name = "baml-bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "BAML bridge integration utilities"

[dependencies]
anyhow = "1.0"
baml-types = { path = "../../vendor/baml/crates/baml-types" }
internal-baml-jinja = { path = "../../vendor/baml/crates/internal-baml-jinja" }
jsonish = { path = "../../vendor/baml/crates/jsonish" }
minijinja = { git = "https://github.com/boundaryml/minijinja.git", branch = "main", default-features = false, features = [
  "macros",
  "builtins",
  "debug",
  "preserve_order",
  "adjacent_loop_items",
  "unicode",
  "json",
  "unstable_machinery",
  "unstable_machinery_serde",
  "custom_syntax",
  "internal_debug",
  "deserialization",
  "serde",
] }
thiserror = "2.0.17"
sha2 = "0.10.9"
indexmap = { version = "2.1.0", features = ["serde"] }
pyo3 = { workspace = true, features = ["auto-initialize"], optional = true }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }

baml-bridge-derive = { path = "../baml-bridge-derive", optional = true }

[features]
default = ["derive"]
derive = ["dep:baml-bridge-derive"]
pyo3 = ["dep:pyo3"]

[dev-dependencies]
dspy-rs = { path = "../dspy-rs" }
expect-test = "1.5.0"
proptest = "1.5.0"
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
trybuild = "1.0.96"
