[package]
name = "bamltype-derive"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Attribute macro for facet-based BAML type generation (proc-macro crate)"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro-crate = "3.2"
convert_case = "0.6"
