[package]
name = "bamltype"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Facet-based BAML type generation"

[dependencies]
# Facet for reflection
# Keep these direct pins in sync with workspace [patch.crates-io] for self-sufficient external path consumers.
facet = { git = "https://github.com/darinkishore/facet", rev = "cc8613c97cd1ec03e63659db34a947989b45c8a5", default-features = false, features = ["std", "doc"] }
facet-reflect = { git = "https://github.com/darinkishore/facet", rev = "cc8613c97cd1ec03e63659db34a947989b45c8a5", default-features = false, features = ["std"] }

# BAML crates for schema/parsing
anyhow = "1.0"
baml-types = { path = "../../vendor/baml/crates/baml-types" }
internal-baml-jinja = { path = "../../vendor/baml/crates/internal-baml-jinja" }
jsonish = { path = "../../vendor/baml/crates/jsonish" }
minijinja = { git = "https://github.com/boundaryml/minijinja.git", branch = "main", default-features = false, features = [
  "macros",
  "builtins",
  "debug",
  "preserve_order",
  "adjacent_loop_items",
  "unicode",
  "json",
  "unstable_machinery",
  "unstable_machinery_serde",
  "custom_syntax",
  "internal_debug",
  "deserialization",
  "serde",
] }

# Attribute macro (re-exported)
bamltype-derive = { path = "../bamltype-derive" }

# Utils
indexmap = "2.1"
sha2 = "0.10.9"
thiserror = "2.0"

[features]
default = ["derive"]
derive = []

[dev-dependencies]
trybuild = "1.0.96"
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
expect-test = "1.5.0"
proptest = "1.5.0"
serde = { version = "1", features = ["alloc", "derive", "rc"] }
