[package]
name = "dspy-rs"
authors = ["Herumb Shandilya <herumb@stanford.edu>"]
version = "0.5.0"
edition = "2024"
description = "A DSPy rewrite(not port) to Rust."
readme = "README.md"
documentation = "https://dsrs.herumbshandilya.com"
homepage = "https://dsrs.herumbshandilya.com"
repository = "https://github.com/krypticmouse/DSRs"
license = "Apache-2.0"
exclude = [
    "docs/*",
]

[dependencies]
futures = "0.3.31"
indexmap = "2.10.0"
rayon = "1.10.0"
rstest = "0.25.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] } 
tokio = { version = "1.46.1", features = ["full"] }
async-openai = "0.29.0"
async-trait = "0.1.83"
anyhow = "1.0.99"
bon = "3.7.0"
secrecy = "0.10.3"
dsrs_macros = { version = "0.5.0", path = "../dsrs-macros" }
validator = "0.20.0"
csv = "1.3.1"
hf-hub = { version = "0.4.3", features = ["tokio"] }
parquet = { version = "56.1.0", optional = true }
arrow = { version = "56.1.0", optional = true }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking"] }

[features]
parquet = ["dep:parquet", "dep:arrow"]
