[package]
name = "dspy-rs"
authors = ["Herumb Shandilya <herumb@stanford.edu>"]
version = "0.7.3"
edition = "2024"
description = "A DSPy rewrite(not port) to Rust."
readme = "../../README.md"
documentation = "https://dsrs.herumbshandilya.com"
homepage = "https://dsrs.herumbshandilya.com"
repository = "https://github.com/krypticmouse/DSRs"
license = "Apache-2.0"
exclude = [
    "docs/*",
]

[dependencies]
futures = "0.3.31"
indexmap = "2.10.0"
rayon = "1.10.0"
rstest = "0.25.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] } 
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.83"
anyhow = "1.0.99"
bon = "3.7.0"
bamltype = { path = "../bamltype" }
# Keep this direct pin in sync with workspace [patch.crates-io] for self-sufficient external path consumers.
facet = { git = "https://github.com/darinkishore/facet", rev = "cc8613c97cd1ec03e63659db34a947989b45c8a5", default-features = false, features = ["std"] }
thiserror = "2.0.17"
dsrs_macros = { version = "0.7.2", path = "../dsrs-macros" }
csv = { version = "1.3.1" }
hf-hub = { version = "0.4.3", features = ["tokio"] }
parquet = { version = "56.1.0" }
arrow = { version = "56.1.0" }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
kdam = "0.6.3"
rand = "0.8.5"
foyer = { version = "0.20.0", features = ["serde"]}
tempfile = "3.23.0"
rig-core = { git = "https://github.com/0xPlaygrounds/rig", rev="e7849df" }
enum_dispatch = "0.3.13"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
minijinja = { git = "https://github.com/boundaryml/minijinja.git", branch = "main", default-features = false, features = ["builtins", "serde"] }

[package.metadata.cargo-machete]
ignored = ["rig-core"]

[features]
default = []
