[package]
name = "dsrs_macros"
version = "0.7.2"
edition = "2024"
authors = ["Herumb Shandilya <herumb@stanford.edu>"]
description = "Derive macros for DSRs (DSPy Rust)"
readme = "../../README.md"
documentation = "https://dsrs.herumbshandilya.com"
homepage = "https://dsrs.herumbshandilya.com"
repository = "https://github.com/krypticmouse/DSRs"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn   = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3.2"
serde_json = { version = "1.0.143", features = ["preserve_order"] }
minijinja = { git = "https://github.com/boundaryml/minijinja.git", branch = "main", default-features = false, features = ["serde"] }

[dev-dependencies]
dspy-rs = { path = "../dspy-rs" }
trybuild = "1.0.110"
