[package]
name = "rlm-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Core traits for RLM type description and introspection"

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"], optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]

[dev-dependencies]
