[package]
name = "rlm-derive"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Derive macros for RLM-compatible types"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
darling = "0.20"

[dev-dependencies]
trybuild = "1.0.103"
