[package]
name = "rlm-derive"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Proc macros for RLM native typed objects"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
proc-macro-crate = "3.2"

[dev-dependencies]
dspy-rs = { path = "../dspy-rs" }
facet = { git = "https://github.com/darinkishore/facet", rev = "cc8613c97cd1ec03e63659db34a947989b45c8a5", default-features = false, features = ["std"] }
trybuild = "1.0.110"