[package]
name = "baml-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
baml-types.workspace = true
internal-baml-jinja.workspace = true
jsonish.workspace = true
minijinja.workspace = true
thiserror.workspace = true
sha2.workspace = true
indexmap.workspace = true

baml-bridge-derive = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:baml-bridge-derive"]

[dev-dependencies]
expect-test.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
trybuild.workspace = true
