[package]
name = "internal-baml-jinja"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[lints.rust]
dead_code = "allow"
mismatched_lifetime_syntaxes = "deny"
unused_imports = "deny"
unused_variables = "deny"

[dependencies]
baml-types = { path = "../baml-types" }
anyhow.workspace = true
indexmap.workspace = true
minijinja.workspace = true
strum.workspace = true
